fixed mobile issue overflowing

--- a/GymFit/wwwroot/Contents/_layoutStylesheet.css
+++ b/GymFit/wwwroot/Contents/_layoutStylesheet.css
@@ -30,7 +30,7 @@ body {
     .container {
         max-width: 1400px;
         margin: 0 auto;
-        width: calc(90% - 120px);
+        width: 90%;
     }
 
 
@@ -56,18 +56,18 @@ body {
 
     .navigation-category {
         display: flex;
-        box-sizing:border-box;
-       position:absolute;
-       justify-content:space-between;
-        left:120px;
+        box-sizing: border-box;
+        position: absolute;
+        justify-content: space-between;
+        left: 120px;
         margin-top: .5em;
         background: white;
         padding: 4em;
-        padding-top:2.5em;
-        padding-bottom:2.5em;
+        padding-top: 2.5em;
+        padding-bottom: 2.5em;
         color: black;
         font-family: Rockwell;
-        width:90%;
+        width: calc(100% - 120px);
     }
 
     .category-card{
